--- a/desafio_borabusao.ipynb
+++ b/desafio_borabusao.ipynb
@@ -3942,7 +3942,7 @@
     "\n",
     "    # Construção dos pipelines\n",
     "    categorical_transformer = Pipeline(steps=[('imputer', SimpleImputer(strategy='most_frequent')),\n",
-    "                                              ('ord_enc', ce.OneHotEncoder())])\n",
+    "                                              ('oh_enc', ce.OneHotEncoder())])\n",
     "\n",
     "    numerical_transformer = Pipeline(steps=[('delete_id', DeletaColunas('ID')),\n",
     "                                            ('imputer', SimpleImputer(strategy='median')),\n",
@@ -4110,14 +4110,14 @@
    "outputs": [],
    "source": [
     "categorical_transformer = Pipeline(steps=[('imputer', SimpleImputer(strategy='most_frequent')),\n",
-    "                                        ('ord_enc', ce.OneHotEncoder())])\n",
+    "                                          ('oh_enc', ce.OneHotEncoder())])\n",
     "\n",
     "numerical_transformer = Pipeline(steps=[('delete_id', DeletaColunas('ID')),\n",
     "                                        ('imputer', SimpleImputer(strategy='median')),\n",
     "                                        ('scaler', StandardScaler())])\n",
     "\n",
     "preprocess_pipeline = ColumnTransformer(transformers=[('num', numerical_transformer,  make_column_selector(dtype_exclude='object')),\n",
-    "                                                    ('cat', categorical_transformer,  make_column_selector(dtype_include='object'))], remainder='drop')\n",
+    "                                                      ('cat', categorical_transformer,  make_column_selector(dtype_include='object'))], remainder='drop')\n",
     "\n",
     "RF_clf_pipe = Pipeline(steps=[('preprocess', preprocess_pipeline),\n",
     "                                ('random_forest', RandomForestClassifier(random_state=42))])"
@@ -4142,7 +4142,7 @@
     "\n",
     "        # Construção das pipelines\n",
     "        categorical_transformer = Pipeline(steps=[('imputer', SimpleImputer(strategy='most_frequent')),\n",
-    "                                                ('ord_enc', ce.OneHotEncoder())])\n",
+    "                                                ('oh_enc', ce.OneHotEncoder())])\n",
     "\n",
     "        numerical_transformer = Pipeline(steps=[('delete_id', DeletaColunas('ID')),\n",
     "                                                ('imputer', SimpleImputer(strategy='median')),\n",
