--- a/desafio_borabusao.ipynb
+++ b/desafio_borabusao.ipynb
@@ -7984,6 +7984,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Análise de viés e variância"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
